--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="cid-ryCBVnshbk mbr-fullscreen mbr-parallax-background" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="cid-ryCBVnshbk mbr-fullscreen mbr-parallax-background" id="header2-0">
 
     
 
@@ -673,7 +673,7 @@
     </div>
 </section>
 
-<section class="mbr-section form1 cid-rzQ2H2CkVj" id="form1-t">
+<section class="mbr-section form1 cid-rFx8UKyNl2" id="form1-15">
 
     
 
@@ -692,7 +692,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NzaTJEYeKoGZTaylgzGKKvMik5PrSP3b68DvvmbeqYXRtYM4wxX1ltIMUtKCBCzIetYW9nXPBs7dogW/5cR3RVwqCEPGltxtxUXB71tDjN7WuxfkO+2a4fvGmwus0RrD">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="R21GgQsXhBE1RZEncCRwsdO+HgxZ1EHDloTuez0ukTht3Ll2Y0QCp6y9n5yX/ggaCEVoMQfk87w3gl7kzn9xCPL4cNysbcVqwXHQnrMpLRMvw2dPVAJ/WdA5G6PrHsMX">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -700,22 +700,22 @@
                     </div>
                     <div class="dragArea row">
                         <div class="col-md-4  form-group" data-for="name">
-                            <label for="name-form1-t" class="form-control-label mbr-fonts-style display-7">Name</label>
-                            <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-t">
+                            <label for="name-form1-15" class="form-control-label mbr-fonts-style display-7">名前</label>
+                            <input type="text" name="name" data-form-field="Name" required="required" class="form-control display-7" id="name-form1-15">
                         </div>
                         <div class="col-md-4  form-group" data-for="email">
-                            <label for="email-form1-t" class="form-control-label mbr-fonts-style display-7">Email</label>
-                            <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-t">
+                            <label for="email-form1-15" class="form-control-label mbr-fonts-style display-7">メール</label>
+                            <input type="email" name="email" data-form-field="Email" required="required" class="form-control display-7" id="email-form1-15">
                         </div>
                         <div data-for="phone" class="col-md-4  form-group">
-                            <label for="phone-form1-t" class="form-control-label mbr-fonts-style display-7">Phone</label>
-                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-t">
+                            <label for="phone-form1-15" class="form-control-label mbr-fonts-style display-7">電話番号</label>
+                            <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-15">
                         </div>
                         <div data-for="message" class="col-md-12 form-group">
-                            <label for="message-form1-t" class="form-control-label mbr-fonts-style display-7">Message</label>
-                            <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-t"></textarea>
+                            <label for="message-form1-15" class="form-control-label mbr-fonts-style display-7">お問い合わせ内容</label>
+                            <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-15"></textarea>
                         </div>
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="mailto:support@itjobsjapan.com">SEND FORM</button></div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="mailto:support@itjobsjapan.com">お問い合わせ</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
