create github pages

--- a/page1.html
+++ b/page1.html
@@ -49,7 +49,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="menu cid-ryJqdkZGEb" once="menu" id="menu1-f">
+<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="menu cid-ryJqdkZGEb" once="menu" id="menu1-f">
 
     
 
@@ -615,7 +615,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GdyT+ZGobmHwhxQ391X9K6yiMyqssqaIoWQTXFpMjZwGH7rmEW8tSU5qc4ZSTD7cD0NYlNQFWUGBcLxNHI74gs+k0FBTehGzWxlYonQMnkCmiwwdmrySMRWL+hGshN6b">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1O0yt8Sgjb/6WBcxIMIvnoX6vSKFptURLsi0gEUEJvM0tp1jfUuN6rwc9WSbZhKgFzJ1JmPqLh0bGVUGLWg+v991uwvpvRJTZfngykBG7rcYOquA7I1KmoDI0MfbgaOJ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
